Estudando o fim de semana

--- a/1_JAVA_OO/5_MVC_Spring/demo/src/main/resources/application.properties
+++ b/1_JAVA_OO/5_MVC_Spring/demo/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.15.60}:3306/cursos
+spring.datasource.username=domar
+spring.datasource.password=admin
