--- a/1_JAVA_OO/6_JDBC/spring-data/src/main/resources/application.properties
+++ b/1_JAVA_OO/6_JDBC/spring-data/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url = jdbc:mariadb://192.168.15.60:3306/domon
+
+spring.datasource.username = domar
+spring.datasource.password = admin
+
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
+
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
