--- a/1_JAVA_OO/5_MVC_Spring/forum/build.gradle
+++ b/1_JAVA_OO/5_MVC_Spring/forum/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
