Pratica de microservicios e JDBC

--- a/1_JAVA_OO/6_JDBC/spring-data/src/main/resources/application.properties
+++ b/1_JAVA_OO/6_JDBC/spring-data/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:mariadb://192.168.15.60:3306/domon
+spring.datasource.url = jdbc:mariadb://192.168.15.60:3306/admin
 
-spring.datasource.username = domar
-spring.datasource.password = admin
+spring.datasource.username = admin
+spring.datasource.password = Info@1234
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
