--- a/1_JAVA_OO/6_JDBC/spring-data-english/pom.xml
+++ b/1_JAVA_OO/6_JDBC/spring-data-english/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
+		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.domon</groupId>
-	<artifactId>spring-data</artifactId>
+	<groupId>bo.com.domon</groupId>
+	<artifactId>spring-data-english</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-data</name>
-	<description>Demo project for Spring Boot</description>
+	<name>spring-data-english</name>
+	<description>Refazendo projeto</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -27,17 +27,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
-			<version>3.0.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>4.1.4.Final</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
